# aswin-skills

./: .gitignore  CHANGELOG.md  README.md  install.sh
.claude-plugin/: marketplace.json
skills/ai-news-crawler/: SKILL.md  main.py  pyproject.toml  requirements.txt
skills/ai-news-crawler/assets/: 3tab_template.html  report_template.html
skills/ai-news-crawler/config/: sources.yaml
skills/ai-news-crawler/processors/: __init__.py  deduplicator.py  report_generator.py  tech_summarizer.py
skills/ai-news-crawler/scripts/: crawl.py
skills/ai-news-crawler/spiders/: __init__.py  arxiv_spider.py  github_spider.py  rss_spider.py
skills/git-review/references/: review-criteria.md
skills/my-skill/: SKILL.md
skills/sdd-workflow/: SKILL.md
